--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <!-- 🔹 HEADER z logotypem -->
   <header class="w-full p-4 flex items-center">
     <a href="/" class="flex items-center gap-2">
-      <img src="/static/logo.png" alt="SLAMY" class="h-8">
+      <img src="/static/logo.svg" alt="SLAMY" class="h-8">
     </a>
   </header>
 
