--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <body class="min-h-screen brand-gradient flex flex-col">
   <!-- 🔹 HEADER z logotypem -->
   <header class="w-full p-4 flex items-center">
-    <a href="/" class="flex items-center gap-2">
+    <a href="https://slamy.online" class="flex items-center gap-2" aria-label="Przejdź na stronę SLAMY">
       <img src="/static/logo.svg" alt="SLAMY" class="h-8">
     </a>
   </header>
