--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,9 @@
         {% block content %}{% endblock %}
       </div>
       <p class="text-xs text-white/70 mt-4 text-center">
-        © {{ 2025 }} SLAMY · <a href="#" class="underline">Regulamin</a> · <a href="#" class="underline">Polityka prywatności</a>
+        © 2025 SLAMY · 
+        <a href="https://slamy.online/warunki-uzytkowania/" target="_blank" rel="noopener noreferrer" class="underline">Regulamin</a> · 
+        <a href="https://slamy.online/polityka-prywatnosci/" target="_blank" rel="noopener noreferrer" class="underline">Polityka prywatności</a>
       </p>
     </div>
   </main>
