--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
 {% block content %}
   <div class="space-y-6">
     <div class="text-center">
-      <h1 class="text-2xl md:text-3xl font-bold">Darmowa lekcja angielskiego online – 30-45 minut</h1>
+      <h1 class="text-2xl md:text-3xl font-bold">Darmowa lekcja angielskiego online (30-45min), przetestuj i poznaj nowy wymiar edukacji </h1>
     </div>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
