--- a/templates/form.html
+++ b/templates/form.html
@@ -2,9 +2,9 @@
 {% block content %}
   <div class="space-y-6">
     <div class="text-center">
-      <h1 class="text-2xl md:text-3xl font-bold">Poznaj lektora, nie ofertę </h1>
+      <h1 class="text-2xl md:text-3xl font-bold">POZNAJ LEKTORA, NIE OFERTĘ </h1>
       <p class="text-white/80 mt-2">
-        40 minut lekcji próbnej bez zobowiązań.
+        Przetestuj bezpłatnie, bez zobowiązań
       </p>
     </div>
 
